2014-05-21  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):
	Fix textAlign when showing layouts line by line.

2014-05-21  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse_lengths_list),
	(gst_ttml_attribute_normalize_length), (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_new_region), (gst_ttmlrender_show_regions):
	* src/gstttmlstate.c: (gst_ttml_state_push_attribute):
	* src/gstttmlutils.c:
	Support for the Padding attribute.

2014-05-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout),
	(gst_ttmlrender_render_outline), (gst_ttmlrender_show_regions):
	Fix attribute rendering when showing layouts line by line.

2014-05-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Support the wrapOption attribute.

2014-05-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_show_layout), (gst_ttmlrender_render_outline),
	(gst_ttmlrender_show_regions):
	* src/gstttmlutils.c:
	Add support for lineHeight attribute.
	Draw layout lines one by one instead of letting Pango draw the whole layout
	so we can control line spacing.
	Use get_pixel_extents for simplicity.

2014-05-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation):
	Fix obvious string leak in GST_DEBUG. Doh!
